--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -71,14 +71,14 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>$(SolutionDir)BUILD\$(ProjectName)\$(Configuration)</OutDir>
     <IntDir>$(SolutionDir)BUILD\$(ProjectName)\$(Configuration)\IMMEDIATE</IntDir>
-    <IncludePath>F:\VisualStudioProjects\Pragma Engine;F:\VisualStudioProjects\Pragma Engine\Dependencies\include;$(IncludePath)</IncludePath>
-    <LibraryPath>F:\VisualStudioProjects\Pragma Engine\BUILD\Pragma Engine\Debug;F:\VisualStudioProjects\Pragma Engine\Dependencies\libs\zlib;F:\VisualStudioProjects\Pragma Engine\Dependencies\libs\SDL;F:\VisualStudioProjects\Pragma Engine\Dependencies\libs\GL;$(LibraryPath)</LibraryPath>
+    <IncludePath>F:\VisualStudioProjects\PragmaEngine;F:\VisualStudioProjects\PragmaEngine\Dependencies\include;$(IncludePath)</IncludePath>
+    <LibraryPath>F:\VisualStudioProjects\PragmaEngine\BUILD\PragmaEngine\Debug;F:\VisualStudioProjects\PragmaEngine\Dependencies\libs;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>$(SolutionDir)BUILD\$(ProjectName)\$(Configuration)</OutDir>
     <IntDir>$(SolutionDir)BUILD\$(ProjectName)\$(Configuration)\IMMEDIATE</IntDir>
-    <IncludePath>F:\VisualStudioProjects\Pragma Engine;F:\VisualStudioProjects\Pragma Engine\Dependencies\include;$(IncludePath)</IncludePath>
-    <LibraryPath>F:\VisualStudioProjects\Pragma Engine\BUILD\Pragma Engine\Release;F:\VisualStudioProjects\Pragma Engine\Dependencies\libs\zlib;F:\VisualStudioProjects\Pragma Engine\Dependencies\libs\SDL;F:\VisualStudioProjects\Pragma Engine\Dependencies\libs\GL;$(LibraryPath)</LibraryPath>
+    <IncludePath>F:\VisualStudioProjects\PragmaEngine;F:\VisualStudioProjects\PragmaEngine\Dependencies\include;$(IncludePath)</IncludePath>
+    <LibraryPath>F:\VisualStudioProjects\PragmaEngine\BUILD\PragmaEngine\Release;F:\VisualStudioProjects\PragmaEngine\Dependencies\libs;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -88,7 +88,7 @@
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>glew32.lib;opengl32.lib;SDL2main.lib;SDL2.lib;zdll.lib;Pragma Engine.lib;Pragma Engine.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glew32.lib;opengl32.lib;SDL2main.lib;SDL2.lib;zdll.lib;pragmaengine.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -110,7 +110,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>glew32.lib;opengl32.lib;SDL2main.lib;SDL2.lib;zdll.lib;Pragma Engine.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glew32.lib;opengl32.lib;SDL2main.lib;SDL2.lib;zdll.lib;pragmaengine.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
