--- a/Zombie Game/Zombie Game.vcxproj
+++ b/Zombie Game/Zombie Game.vcxproj
@@ -147,6 +147,9 @@
     <ClInclude Include="Player.h" />
     <ClInclude Include="Zombie.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Levels\level1.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
