--- a/NinjaPlatformer/NinjaPlatformer.vcxproj
+++ b/NinjaPlatformer/NinjaPlatformer.vcxproj
@@ -127,6 +127,7 @@
   <ItemGroup>
     <ClCompile Include="App.cpp" />
     <ClCompile Include="Box.cpp" />
+    <ClCompile Include="Capsule.cpp" />
     <ClCompile Include="GameplayScreen.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -134,7 +135,9 @@
   <ItemGroup>
     <ClInclude Include="App.h" />
     <ClInclude Include="Box.h" />
+    <ClInclude Include="Capsule.h" />
     <ClInclude Include="GameplayScreen.h" />
+    <ClInclude Include="Light.h" />
     <ClInclude Include="Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
