--- a/PragmaEngine/Pragma Engine.vcxproj.filters
+++ b/PragmaEngine/Pragma Engine.vcxproj.filters
@@ -96,6 +96,12 @@
     <ClInclude Include="AudioEngine.h">
       <Filter>Audio</Filter>
     </ClInclude>
+    <ClInclude Include="DebugRenderer.h">
+      <Filter>Core</Filter>
+    </ClInclude>
+    <ClInclude Include="TileSheet.h">
+      <Filter>Core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="IMainGame.cpp">
@@ -157,6 +163,9 @@
     </ClCompile>
     <ClCompile Include="AudioEngine.cpp">
       <Filter>Audio</Filter>
+    </ClCompile>
+    <ClCompile Include="DebugRenderer.cpp">
+      <Filter>Core</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
