--- a/NinjaPlatformer/NinjaPlatformer.vcxproj
+++ b/NinjaPlatformer/NinjaPlatformer.vcxproj
@@ -108,7 +108,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <SubSystem>Console</SubSystem>
-      <AdditionalDependencies>glew32.lib;opengl32.lib;SDL2main.lib;SDL2.lib;SDL2_ttf.lib;SDL2_mixer.lib;irrKlang.lib;BOX2D.lib;pragmaengine.lib</AdditionalDependencies>
+      <AdditionalDependencies>pragmaengine.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
